# Hellocuda

./: .gitignore  CMakeLists.txt  build.sh  main.cpp
src/: Matrix.cpp  Matrix.h  kernel.cu  kernel.cuh
